perf(show): remove condition to load later section only if cast is loaded, prevent layout shift when cast is loading

--- a/src/app/pages/shows/pages/show/ui/show-cast/show-cast.component.scss
+++ b/src/app/pages/shows/pages/show/ui/show-cast/show-cast.component.scss
@@ -5,6 +5,11 @@
   gap: 1rem;
   overflow: auto;
   padding-bottom: 0.5rem;
+  height: 195px; // Prevent layout shift
+
+  @media (min-width: vars.$breakpoint-sm) {
+    height: 291px; // Prevent layout shift
+  }
 
   .cast {
     display: flex;
